--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-typescript": "^7.12.7",
-    "@rollup/plugin-typescript": "^4.1.2",
     "@types/webrtc": "0.0.26",
     "babel-preset-minify": "^0.5.1",
     "http-server": "^0.12.3",
@@ -37,6 +36,7 @@
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.31.1",
     "standard": "^14.3.4",
     "typescript": "^3.9.7"
   },
